@@ -5,6 +5,8 @@ Phoronix Test Suite (Git)
 pts-core: Split the dynamic result viewer into its own embed class for result file handling to allow for easy re-use by OpenBenchmarking, Phoromatic, etc
 pts_Graph: Add histogram type
 phodevi: CPU core name / family detection to friendly strings (OpenBenchmarking.org driven)
+phodevi: Report core name via system-info command
+phodevi: Various storage HDD/SSD detection reporting improvements
 
 Phoronix Test Suite 9.8.0
 9 July 2020
